[gd_scene load_steps=5 format=3 uid="uid://dmmqvslef4a1s"]

[ext_resource type="Script" uid="uid://ck8w52by178u5" path="res://dialog/game_over_dialog.gd" id="1_jdh1y"]
[ext_resource type="Texture2D" uid="uid://375fo0s6eyaq" path="res://dialog/yellow_panel.png" id="2_vfxoq"]

[sub_resource type="LabelSettings" id="LabelSettings_jdh1y"]
font_size = 64
font_color = Color(0.122252, 0.122252, 0.122252, 1)

[sub_resource type="LabelSettings" id="LabelSettings_vfxoq"]
font_size = 32
font_color = Color(0.205117, 0.205117, 0.205117, 1)

[node name="GameOverDialog" type="Control"]
process_mode = 3
z_index = 10
z_as_relative = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_jdh1y")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -250.0
offset_right = 400.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="CenterContainer/PanelContainer"]
custom_minimum_size = Vector2(500, 400)
layout_mode = 2
texture = ExtResource("2_vfxoq")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="GameOverLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_jdh1y")
horizontal_alignment = 1

[node name="StatsLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
text = "Completed Laps: 0"
label_settings = SubResource("LabelSettings_vfxoq")
horizontal_alignment = 1

[node name="PlayAgainButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "Play Again"

[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
